--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ wayland-csd-adwaita-crossfont = ["sctk-adwaita", "sctk-adwaita/crossfont"]
 wayland-csd-adwaita-notitle = ["sctk-adwaita"]
 wayland-dlopen = ["wayland-backend/dlopen"]
 x11 = ["x11-dl", "bytemuck", "percent-encoding", "xkbcommon-dl/x11", "x11rb"]
+windows-ink = ["windows"]
 
 [build-dependencies]
 cfg_aliases = "0.2.1"
@@ -231,6 +232,7 @@ windows-sys = { version = "0.52.0", features = [
     "Win32_UI_TextServices",
     "Win32_UI_WindowsAndMessaging",
 ] }
+windows = { version = "0.58.0", features = ["Devices_Input", "UI_Input"], optional = true}
 
 # Linux
 [target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_vendor = "apple"))))'.dependencies]
